fix: change max-width container page for visibility tooltip info

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -5,7 +5,7 @@
   margin: 0 auto;
   width: 100%;
   @media (max-width: $md1 + px) {
-    max-width: 1300px;
+    max-width: 1400px;
   }
   @media (max-width: $md2 + px) {
     max-width: 920px;
