--- a/src/components/modules/exchange-points/ExchangePointsModule.scss
+++ b/src/components/modules/exchange-points/ExchangePointsModule.scss
@@ -100,3 +100,6 @@
   }
 }
 
+.info-tooltip {
+  flex: 1 0 20px
+}
